--- a/pages/templates/pages/home/section/creation.html
+++ b/pages/templates/pages/home/section/creation.html
@@ -1,5 +1,5 @@
 {% load static %}
-<section class="story-section">
+<section class="story-section" id="SUR-MESURE">
 
     <div class="story-block">
         <div class="story-image">
