--- a/pages/templates/pages/home/catalogue/product_catalog.html
+++ b/pages/templates/pages/home/catalogue/product_catalog.html
@@ -326,52 +326,202 @@
                         </a>
                     </article>
 
+
                     <article class="product-item">
                         <a href="#">
-                            <img src="{% static 'pages/images/robes/louis-vuitton-robe-polo-en-gabardine-technique--FTDS43G72900_PM1_Worn view.avif' %}" alt="Robe polo en gabardine technique">
+                            <div class="swiper product-slider">
+                                <div class="swiper-wrapper">
+                                    <div class="swiper-slide">
+                                        <img src="{% static 'pages/images/robes/louis-vuitton-robe-polo-en-gabardine-technique--FTDS43G72900_PM1_Worn view.avif' %}" alt="Robe polo en gabardine technique">
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <img src="{% static 'pages/images/robes/louis-vuitton-robe-polo-en-gabardine-technique--FTDS43G72900_PM1_Side view.avif' %}" alt="Robe à bretelles - Vue 2">
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <img src="{% static 'pages/images/robes/louis-vuitton-robe-polo-en-gabardine-technique--FTDS43G72900_PM1_Cropped worn view.avif' %}" alt="Robe à bretelles - Vue 3">
+                                    </div>
+                                </div>
+                                <div class="swiper-pagination"></div>
+                                <div class="swiper-button-prev"></div>
+                                <div class="swiper-button-next"></div>
+                            </div>
                             <div class="product-info">
                                 <h2>Robe polo en gabardine technique</h2>
-                                <p class="price">250,00 €</p>
+                                <p class="price">180,00 €</p>
                             </div>
                         </a>
                     </article>
 
                     <article class="product-item">
                         <a href="#">
-                            <img src="{% static 'pages/images/robes/mini-jupe-a-pli-imprime-guepards-et-palmettes--5E0343DSDE-worn-1-0-0-800-800_g (1).webp' %}" alt="Robe plissée à Monogram délavé">
+                            <div class="swiper product-slider">
+                                <div class="swiper-wrapper">
+                                    <div class="swiper-slide">
+                                        <img src="{% static 'pages/images/robes/mini-jupe-a-pli-imprime-guepards-et-palmettes--5E0343DSDE-worn-1-0-0-800-800_g (1).webp' %}" alt="Robe plissée à Monogram délavé">
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <img src="{% static 'pages/images/robes/mini-jupe-a-pli-imprime-guepards-et-palmettes--5E0343DSDE-worn-2-0-0-800-800_g.webp' %}" alt="Robe à bretelles - Vue 2">
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <img src="{% static 'pages/images/robes/mini-jupe-a-pli-imprime-guepards-et-palmettes--5E0343DSDE-worn-1-0-0-800-800_g.webp' %}" alt="Robe à bretelles - Vue 3">
+                                    </div>
+                                </div>
+                                <div class="swiper-pagination"></div>
+                                <div class="swiper-button-prev"></div>
+                                <div class="swiper-button-next"></div>
+                            </div>
                             <div class="product-info">
                                 <h2>Robe plissée à Monogram délavé</h2>
-                                <p class="price">250,00 €</p>
+                                <p class="price">380,00 €</p>
                             </div>
                         </a>
                     </article>
 
                     <article class="product-item">
                         <a href="#">
-                            <img src="{% static 'pages/images/robes/louis-vuitton-robe-boutonnee-en-denim--FTDR40GOW610_PM1_Worn view.avif' %}" alt="Robe à bretelles et mousquetons">
+                            <div class="swiper product-slider">
+                                <div class="swiper-wrapper">
+                                    <div class="swiper-slide">
+                                        <img src="{% static 'pages/images/robes/louis-vuitton-robe-chemise-a-monogram-graphique--FTDR63WVD002_PM2_Front view.avif' %}" alt="Robe plissée à Monogram délavé">
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <img src="{% static 'pages/images/robes/louis-vuitton-robe-chemise-a-monogram-graphique--FTDR63WVD002_PM1_Cropped worn view.avif' %}" alt="Robe à bretelles - Vue 2">
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <img src="{% static 'pages/images/robes/louis-vuitton-robe-chemise-a-monogram-graphique--FTDR63WVD002_PM1_Side view.webp' %}" alt="Robe à bretelles - Vue 3">
+                                    </div>
+                                </div>
+                                <div class="swiper-pagination"></div>
+                                <div class="swiper-button-prev"></div>
+                                <div class="swiper-button-next"></div>
+                            </div>
                             <div class="product-info">
-                                <h2>Robe à bretelles et mousquetons</h2>
-                                <p class="price">250,00 €</p>
+                                <h2>Robe chemise à Monogram graphique</h2>
+                                <p class="price">333,00 €</p>
                             </div>
                         </a>
                     </article>
 
                     <article class="product-item">
                         <a href="#">
-                            <img src="{% static 'pages/images/robes/louis-vuitton-robe-polo-en-gabardine-technique--FTDS43G72900_PM1_Worn view.avif' %}" alt="Robe polo en gabardine technique">
+                            <div class="swiper product-slider">
+                                <div class="swiper-wrapper">
+                                    <div class="swiper-slide">
+                                        <img src="{% static 'pages/images/robes/louis-vuitton-robe-chemise-a-imprime-monogram-foulard--FSDR29SDK700_PM1_Worn view.avif' %}" alt="Robe plissée à Monogram délavé">
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <img src="{% static 'pages/images/robes/louis-vuitton-robe-chemise-a-imprime-monogram-foulard--FSDR29SDK700_PM2_Front view.png' %}" alt="Robe à bretelles - Vue 2">
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <img src="{% static 'pages/images/robes/louis-vuitton-robe-chemise-a-imprime-monogram-foulard--FSDR29SDK700_PM1_Back view.png' %}" alt="Robe à bretelles - Vue 3">
+                                    </div>
+                                </div>
+                                <div class="swiper-pagination"></div>
+                                <div class="swiper-button-prev"></div>
+                                <div class="swiper-button-next"></div>
+                            </div>
                             <div class="product-info">
-                                <h2>Robe polo en gabardine technique</h2>
-                                <p class="price">250,00 €</p>
+                                <h2>Robe chemise à imprimé Monogram Foulard</h2>
+                                <p class="price">400,00 €</p>
                             </div>
                         </a>
                     </article>
 
                     <article class="product-item">
                         <a href="#">
-                            <img src="{% static 'pages/images/robes/mini-jupe-a-pli-imprime-guepards-et-palmettes--5E0343DSDE-worn-1-0-0-800-800_g (1).webp' %}" alt="Robe plissée à Monogram délavé">
+                            <div class="swiper product-slider">
+                                <div class="swiper-wrapper">
+                                    <div class="swiper-slide">
+                                        <img src="{% static 'pages/images/robes/louis-vuitton-robe-tee-shirt-a-nœud-et-motif-floral--FTJD29WUV002_PM1_Worn view.avif' %}" alt="Robe plissée à Monogram délavé">
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <img src="{% static 'pages/images/robes/louis-vuitton-robe-tee-shirt-a-nœud-et-motif-floral--FTJD29WUV002_PM2_Front view.avif' %}" alt="Robe à bretelles - Vue 2">
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <img src="{% static 'pages/images/robes/louis-vuitton-robe-tee-shirt-a-nœud-et-motif-floral--FTJD29WUV002_PM1_Back view (1).webp' %}" alt="Robe à bretelles - Vue 3">
+                                    </div>
+                                </div>
+                                <div class="swiper-pagination"></div>
+                                <div class="swiper-button-prev"></div>
+                                <div class="swiper-button-next"></div>
+                            </div>
                             <div class="product-info">
-                                <h2>Robe plissée à Monogram délavé</h2>
+                                <h2>Robe tee-shirt à nœud et motif floral</h2>
+                                <p class="price">350,00 €</p>
+                            </div>
+                        </a>
+                    </article>
+
+
+                    <article class="product-item">
+                        <a href="#">
+                            <div class="swiper product-slider">
+                                <div class="swiper-wrapper">
+                                    <div class="swiper-slide">
+                                        <img src="{% static 'pages/images/robes/louis-vuitton-robe-chemise-a-details-monogram--FTDS05YF4000_PM1_Worn view.avif' %}" alt="Robe plissée à Monogram délavé">
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <img src="{% static 'pages/images/robes/louis-vuitton-robe-chemise-a-details-monogram--FTDS05YF4000_PM2_Front view.avif' %}" alt="Robe à bretelles - Vue 2">
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <img src="{% static 'pages/images/robes/louis-vuitton-robe-chemise-a-details-monogram--FTDS05YF4000_PM1_Cropped view.avif' %}" alt="Robe à bretelles - Vue 3">
+                                    </div>
+                                </div>
+                                <div class="swiper-pagination"></div>
+                                <div class="swiper-button-prev"></div>
+                                <div class="swiper-button-next"></div>
+                            </div>
+                            <div class="product-info">
+                                <h2>Robe chemise à détails Monogram</h2>
+                                <p class="price">270,00 €</p>
+                            </div>
+                        </a>
+                    </article>
+
+                    <article class="product-item">
+                        <a href="#">
+                            <div class="swiper product-slider">
+                                <div class="swiper-wrapper">
+                                    <div class="swiper-slide">
+                                        <img src="{% static 'pages/images/robes/louis-vuitton-robe-a-rangees-de-boutons--FTDR33NQA000_PM1_Worn view.avif' %}" alt="Robe plissée à Monogram délavé">
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <img src="{% static 'pages/images/robes/louis-vuitton-robe-a-rangees-de-boutons--FTDR33NQA000_PM2_Front view.avif' %}" alt="Robe à bretelles - Vue 2">
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <img src="{% static 'pages/images/robes/louis-vuitton-robe-a-rangees-de-boutons--FTDR33NQA000_PM1_Cropped view.jpg' %}" alt="Robe à bretelles - Vue 3">
+                                    </div>
+                                </div>
+                                <div class="swiper-pagination"></div>
+                                <div class="swiper-button-prev"></div>
+                                <div class="swiper-button-next"></div>
+                            </div>
+                            <div class="product-info">
+                                <h2>Robe à rangées de boutons</h2>
                                 <p class="price">250,00 €</p>
+                            </div>
+                        </a>
+                    </article>
+
+
+                    <article class="product-item">
+                        <a href="#">
+                            <div class="swiper product-slider">
+                                <div class="swiper-wrapper">
+                                    <div class="swiper-slide">
+                                        <img src="{% static 'pages/images/robes/louis-vuitton-robe-plissee-a-encolure-americaine--FSDS84SLD900_PM2_Front view.avif' %}" alt="Robe plissée à Monogram délavé">
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <img src="{% static 'pages/images/robes/louis-vuitton-robe-plissee-a-encolure-americaine--FSDS84SLD900_PM1_Back view.avif' %}" alt="Robe à bretelles - Vue 2">
+                                    </div>
+                                </div>
+                                <div class="swiper-pagination"></div>
+                                <div class="swiper-button-prev"></div>
+                                <div class="swiper-button-next"></div>
+                            </div>
+                            <div class="product-info">
+                                <h2>Robe plissée à encolure américaine</h2>
+                                <p class="price">199,00 €</p>
                             </div>
                         </a>
                     </article>
