--- a/pages/static/pages/style_header.css
+++ b/pages/static/pages/style_header.css
@@ -105,12 +105,12 @@
         position: relative;
     }
 
-    .main-nav a::after {
+    .nav-links-left a::after,
+    .nav-links-right a::after {
         content: '';
         position: absolute;
         bottom: 4px;
         left: 50%;
-        transform: translateX(-50%);
         width: 70%;
         height: 2px;
         background-image: linear-gradient(to right, #009246 33.3%, #333333 33.3%, #333333 66.6%, #ce2b37 66.6%);
@@ -119,8 +119,10 @@
         transition: transform 0.4s ease-in-out;
     }
 
-    .main-nav a:hover::after,
-    .main-nav a.active-link::after {
+    .nav-links-left a:hover::after,
+    .nav-links-right a:hover::after,
+    .nav-links-left a.active-link::after,
+    .nav-links-right a.active-link::after {
         transform: translateX(-50%) scaleX(1);
     }
 
